Fix layout issue with chloropleth chart

--- a/src/views/ChoroplethMap.css
+++ b/src/views/ChoroplethMap.css
@@ -1,15 +1,18 @@
-#map { 
+#map {
     height: 100%;
-    width: 100%; 
-    position: absolute;
+    width: 100%;
     left: 0;
     top: 0;
 }
 /* .leaflet-container {
     height: 100%;
     width: 100%;
-    
+
 } */
+
+.leaflet-control-attribution {
+  display: none;
+}
 
 .info {
     padding: 6px 8px;
